--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2508,7 +2508,7 @@
 			bottom: 0;
 			left: 0;
 			padding: 2em;
-			position: absolute;
+			/* position: absolute; */
 			width: 100%;
 		}
 
@@ -3071,7 +3071,7 @@
 
 	#one {
 		margin-top: 20px;
-		height: 100vh;
+		/* height: 100vh; */
 	}
 
 	b {
