--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,15 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/*
+	To change color, find/replace all instance of colors below:
+
+		Right panel color: #436370
+		button border color(lighter): #4d7280
+		Link hover over highlight color(lighter): #80a5b3
+		Social share color(lightest): bfbfbf;
+*/
+
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -1578,7 +1587,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #565656 !important;
+			color: #436370 !important;
 		}
 
 	strong, b {
@@ -1730,7 +1739,7 @@
 	}
 
 	header.major h2 {
-		color: #565656;
+		color: #436370;
 		font-size: 3.5em;
 	}
 
@@ -1793,7 +1802,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #565656;
+			border-color: #436370;
 		}
 
 	.select-wrapper {
@@ -1895,15 +1904,15 @@
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #989898;
-			border-color: #989898;
+			background: #80a5b3	;
+			border-color: #80a5b3	;
 			color: #ffffff;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #565656;
+			border-color: #436370;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2096,7 +2105,7 @@
 				}
 
 				ul.feature-icons li:before {
-					background: #565656;
+					background: #436370;
 					border-radius: 100%;
 					color: #ffffff;
 					display: block;
@@ -2281,7 +2290,7 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #989898;
+		background-color: #80a5b3	;
 		border-radius: 5px;
 		border: 0;
 		color: #ffffff !important;
@@ -2383,7 +2392,7 @@
 		input[type="reset"].special,
 		input[type="button"].special,
 		.button.special {
-			background-color: #565656;
+			background-color: #436370;
 			color: #ffffff !important;
 		}
 
@@ -2453,7 +2462,7 @@
 /* Header */
 
 	#header {
-		background: #565656;
+		background: #436370;
 		color: #d6f5f5;
 		height: 100%;
 		position: fixed;
@@ -2472,7 +2481,7 @@
 			}
 
 		#header header p {
-			color: #bfbfbf;
+			color: #cfdde2;
 		}
 
 		#header a {
@@ -2517,7 +2526,7 @@
 			}
 
 				#header > footer .icons li a {
-					color: #bfbfbf;
+					color: #cfdde2;
 				}
 
 		#header > nav ul {
@@ -2527,7 +2536,7 @@
 		}
 
 			#header > nav ul li {
-				border-top: solid 2px #707070;
+				border-top: solid 2px #4d7280;
 				display: block;
 				padding: 0;
 			}
@@ -2546,7 +2555,7 @@
 
 					#header > nav ul li a.active {
 						background: #fff;
-						color: #565656 !important;
+						color: #436370 !important;
 					}
 
 				#header > nav ul li:first-child {
@@ -2828,7 +2837,7 @@
 					}
 
 					#titleBar .toggle:before {
-						background: #565656;
+						background: #436370;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
